# gpm

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/skills/gpm/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: .nojekyll  ASSET_SELECTION.md  app.js  index.html  styles.css
src/: cli.rs  commands.rs  errors.rs  extractor.rs  github.rs  installer.rs  lib.rs  main.rs  manifest.rs  network.rs  paths.rs  table.rs  ui.rs
tests/: integration.rs
