[package]
name = "gpm"
version = "0.1.0"
edition = "2024"
authors = ["wnoronha <16291+wnoronha@users.noreply.github.com>"]
description = "A lightweight version manager for GitHub binaries"
repository = "https://github.com/wnoronha/gpm"
homepage = "https://github.com/wnoronha/gpm"
license = "MIT"
keywords = ["github", "binary", "package-manager", "cli", "rust"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gpm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
self_update = { version = "0.41", default-features = false, features = [
    "rustls",
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
tar = "0.4"
flate2 = "1"
zstd = "0.13"
zip = "2"
dialoguer = "0.11"
dirs = "6"
async-trait = "0.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
tempfile = "3"
sha2 = "0.11.0"
hex = "0.4.3"

[dev-dependencies]
mockall = "0.13"
assert_fs = "1"
criterion = "0.5"
wiremock = "0.6"
proptest = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
